--- a/index.html
+++ b/index.html
@@ -219,10 +219,10 @@
             <p><em>Sahibzada Ajit Singh Nagar, Punjab, India</em></p>
             <p>
             <ul>
-              <li>Lead in the design, development, and implementation of the graphic, layout, and production communication materials</li>
-              <li>Delegate tasks to the 7 members of the design team and provide counsel on all aspects of the project. </li>
-              <li>Supervise the assessment of all graphic materials in order to ensure quality and accuracy of the design</li>
-              <li>Oversee the efficient use of production project budgets ranging from $2,000 - $25,000</li>
+              <li>Created custom plugins of my wordpress like wp-posts and products import export plugin, adsense and geogo api revenue chart graph plugin, rss feed plugin, advertiser-frontend plugin, wp-posts and products and any custom-post type ordering plugin , Create custom post type plugin.</li>
+              <li>I've also worked on converting custom HTML to a Shopify theme on Shopify.</li>
+              <li>I've also worked on converting custom HTML to a Laravel Website.</li>
+              
             </ul>
             </p>
           </div>
