--- a/index.html
+++ b/index.html
@@ -269,7 +269,49 @@
             </div>
           </div>
         </div>
-
+		
+		<div class="col-lg-4 col-md-6 portfolio-item filter-app">
+          <div class="portfolio-wrap">
+            <img src="assets/img/portfolio/wordpress/blogs/Screenshot_3333.png" class="img-fluid" alt="">
+            <div class="portfolio-info">
+              <h4>Wordpress</h4>
+              <p>Blogs Website</p>
+              <div class="portfolio-links">
+                <a href="assets/img/portfolio/wordpress/blogs/Screenshot_3333.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Blogs Website"><i class="bx bx-plus"></i></a>
+               <a href="https://recession.org/" class="portfolio-details-lightbox" ><i class="bx bx-link"></i></a>
+              </div>
+            </div>
+          </div>
+        </div>
+		
+		<div class="col-lg-4 col-md-6 portfolio-item filter-app">
+          <div class="portfolio-wrap">
+            <img src="assets/img/portfolio/laravel/Screenshot_444.png" class="img-fluid" alt="">
+            <div class="portfolio-info">
+              <h4>Laravel</h4>
+              <p>Imperium AI</p>
+              <div class="portfolio-links">
+                <a href="assets/img/portfolio/laravel/Screenshot_444.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Imperium AI"><i class="bx bx-plus"></i></a>
+                <a href="https://imperiumgroup.ai/" class="portfolio-details-lightbox" ><i class="bx bx-link"></i></a>
+              </div>
+            </div>
+          </div>
+        </div>
+		
+		<div class="col-lg-4 col-md-6 portfolio-item filter-app">
+          <div class="portfolio-wrap">
+            <img src="assets/img/portfolio/wordpress/blogs/Screenshot_888.png" class="img-fluid" alt="">
+            <div class="portfolio-info">
+              <h4>Wordpress</h4>
+              <p>Woocomerce Website </p>
+              <div class="portfolio-links">
+                <a href="assets/img/portfolio/wordpress/woocomerce/Screenshot_888.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Woocomerce Website Use for Truck Parts"><i class="bx bx-plus"></i></a>
+               <a href="https://japaco.no/" class="portfolio-details-lightbox" ><i class="bx bx-link"></i></a>
+              </div>
+            </div>
+          </div>
+        </div>
+		
         <div class="col-lg-4 col-md-6 portfolio-item filter-web">
           <div class="portfolio-wrap">
             <img src="assets/img/portfolio/portfolio-2.jpg" class="img-fluid" alt="">
@@ -284,19 +326,7 @@
           </div>
         </div>
 
-        <div class="col-lg-4 col-md-6 portfolio-item filter-app">
-          <div class="portfolio-wrap">
-            <img src="assets/img/portfolio/wordpress/blogs/Screenshot_3333.png" class="img-fluid" alt="">
-            <div class="portfolio-info">
-              <h4>Wordpress</h4>
-              <p>Blogs Website</p>
-              <div class="portfolio-links">
-                <a href="assets/img/portfolio/wordpress/blogs/Screenshot_3333.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Blogs Website"><i class="bx bx-plus"></i></a>
-               <a href="https://recession.org/" class="portfolio-details-lightbox" ><i class="bx bx-link"></i></a>
-              </div>
-            </div>
-          </div>
-        </div>
+       
 
         <div class="col-lg-4 col-md-6 portfolio-item filter-card">
           <div class="portfolio-wrap">
@@ -326,19 +356,7 @@
           </div>
         </div>
 
-        <div class="col-lg-4 col-md-6 portfolio-item filter-app">
-          <div class="portfolio-wrap">
-            <img src="assets/img/portfolio/laravel/Screenshot_444.png" class="img-fluid" alt="">
-            <div class="portfolio-info">
-              <h4>Laravel</h4>
-              <p>Imperium AI</p>
-              <div class="portfolio-links">
-                <a href="assets/img/portfolio/laravel/Screenshot_444.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Imperium AI"><i class="bx bx-plus"></i></a>
-                <a href="https://imperiumgroup.ai/" class="portfolio-details-lightbox" ><i class="bx bx-link"></i></a>
-              </div>
-            </div>
-          </div>
-        </div>
+        
 
         <div class="col-lg-4 col-md-6 portfolio-item filter-card">
           <div class="portfolio-wrap">
