--- a/index.html
+++ b/index.html
@@ -332,8 +332,8 @@
               <h4>Woocomerce Sqaure Plugin</h4>
               <p>Square Api Fetch</p>
               <div class="portfolio-links">
-                <a href="assets/img/portfolio/wordpress/woocomerce/Screenshot_1011.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Card 1"><i class="bx bx-plus"></i></a>
-                <a href="" data-gallery="portfolioDetailsGallery" data-glightbox="type: external" class="portfolio-details-lightbox" title="Square Api Products Import Into woocomerce."><i class="bx bx-link"></i></a>
+                <a href="assets/img/portfolio/wordpress/woocomerce/Screenshot_1011.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Square Api Products Import Into woocomerce."><i class="bx bx-plus"></i></a>
+                
               </div>
             </div>
           </div>
